--- a/src/common.css
+++ b/src/common.css
@@ -17,3 +17,23 @@ html {
     font-size: 22px;
   }
 }
+
+/* body默认样式 */
+body {
+  max-width: 640px;
+  margin: 0 auto;
+  background: #f8f8f8;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
+}
+
+/* 页面蒙版 */
+.ssy-mark {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, .5);
+  z-index: 200;
+}
