--- a/src/ssy-ui.css
+++ b/src/ssy-ui.css
@@ -1,2 +1,15 @@
 @import './reset.css';
-@import './common.css'
+
+@import './common.css';
+
+/* 字体图标 */
+@import './icon.css';
+
+/* 标题栏样式 */
+@import './header.css';
+
+/* 内容区样式 */
+@import './content.css';
+
+/* 导航条样式 */
+@import './navbar.css';
