--- a/src/content.css
+++ b/src/content.css
@@ -13,3 +13,32 @@
 .ssy-navbar~.ssy-content {
   padding-bottom: 2.5rem;
 }
+
+/* 内容分区 -- Panel 面板 */
+/* Panel 标题 */
+.ssy-content .ssy-panel-title {
+  height: 1.8rem;
+  line-height: 1.8rem;
+  padding-left: 1rem;
+  color: #aaa;
+  background: #fff;
+  border-top: 1px solid #eee;
+  font-size: 14px;
+  font-weight: normal;
+}
+
+/* Panel 内容区 */
+.ssy-content .ssy-panel-body {
+  position: relative;
+  margin-bottom: .6rem;
+  padding: .6rem 1rem;
+  background: #fff;
+  overflow: hidden;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+}
+
+/* 可手动设置内容区是否有内边距 */
+.ssy-content .ssy-panel-body.no-padding {
+  padding: 0;
+}
