--- a/src/header.css
+++ b/src/header.css
@@ -1,11 +1,36 @@
 /* 头部导航条 */
 .ssy-header {
+  display: flex;
   position: fixed;
   box-sizing: border-box;
   width: 100%;
   max-width: 640px;
   height: 2.3rem;
+  line-height: 2.3rem;
+  text-align: center;
   top: 0;
   z-index: 200;
   border-bottom: 1px solid #ddd;
+  background: #f8f8f8;
+}
+
+/* 左侧功能区 */
+.ssy-header>.left {
+  flex-basis: 4rem;
+  text-align: center;
+  flex-shrink: 0;
+}
+
+/* 中间标题部分 */
+.ssy-header>.title {
+  flex-grow: 1;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+/* 右侧功能区 */
+.ssy-header>.right {
+  flex-basis: 4rem;
+  flex-shrink: 0;
 }
