--- a/src/navbar.css
+++ b/src/navbar.css
@@ -1,11 +1,44 @@
+/*
+* @Author: mqxu 
+* @Date: 2022-12-26 10:06:29 
+* @Last Modified by: mqxu
+* @Last Modified time: 2022-12-26 16:37:40
+*/
+
 /* 底部导航栏 */
 .ssy-navbar {
+  display: flex;
   position: fixed;
   box-sizing: border-box;
   bottom: 0;
   width: 100%;
   max-width: 640px;
-  height: 2.5rem;
+  height: 3.2rem;
   border-top: 1px solid #ddd;
   z-index: 200;
+  background: #f8f8f8;
+  text-align: center;
+}
+
+/* 导航项目 */
+.ssy-navbar>.navbar-item {
+  flex: 1;
+  color: #808080;
+}
+
+/* 被选中的样式 */
+.ssy-navbar>.navbar-item.active {
+  color: #09BB07;
+}
+
+/* 导航图标 */
+.ssy-navbar>.navbar-item>.icon {
+  padding: .3rem 0 .1rem;
+  font-size: 1.1rem;
+}
+
+/* 导航名称 */
+.ssy-navbar>.navbar-item>.name {
+  display: block;
+  font-size: .5rem;
 }
