--- a/src/icon.css
+++ b/src/icon.css
@@ -6,8 +6,8 @@
 .fa {
   display: inline-block;
   text-align: center;
-  width: 1.5rem;
+  /* width: 1.5rem;
   height: 1.5rem;
   line-height: 1.5rem;
-  font-size: 1.2rem;
+  font-size: 1.2rem; */
 }
